# fingan

./: .gitignore  LICENSE.txt  Pipfile  README.md  setup.cfg  setup.py
fingan/models/: __init__.py  gan.py  model.py  quantgan.py  ragan.py  resnet.py  wgan.py  wgan_gp.py
fingan/utils/data/: DataGenerator.py  TestData.py  dataset.py  preprocess.py
tests/: model_tests.py  testDataGeneration.py  test_data_loaders.py
