[metadata]
name = fingan
version = 0.0.1
author = Alexander Oldroyd
author_email = alexander@ajoldroyd.co.uk
description = Package for the generation of synthetic time series
long_description = file: README.md
url = ""
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = fingan
packages = find:
python_requires = >=3.9

[options.packages.find]
where = fingan